--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
