--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
+    "cdbreact": "^1.5.9",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
