--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "cdbreact": "^1.5.9",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^10.6.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "react-vertical-timeline-component": "^3.6.0",
+    "sass": "^1.59.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
